--- a/style_home.css
+++ b/style_home.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar {
     width: 100%;
     color: white;
     position: fixed; 
-    top: 30px;
+    top: 17px;
     z-index: 10;
 }
 
@@ -46,7 +46,7 @@ body::-webkit-scrollbar {
 }
 
 .navbar a{
-    font-size: 23px;
+    font-size: 20px;
     font-family:Jost;
     text-decoration: none;
     color:black
@@ -60,14 +60,16 @@ body::-webkit-scrollbar {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .box img {
-    height:125px;
+    height:100px;
 }
 
 .box1 img {
-    height:150px;
+    height:125px;
 }
 
 .box1 {
@@ -91,7 +93,7 @@ body::-webkit-scrollbar {
 
 
 .icontext {
-    font-size: 23px;
+    font-size: 20px;
     font-family:Jost;
     color: #333;
     text-align: center;
@@ -105,11 +107,11 @@ body::-webkit-scrollbar {
     width: 100%;
     color: black;
     position: fixed;
-    bottom: 30px;
+    bottom: 17px;
 }
 
 .socials a{
-    font-size: 23px;
+    font-size: 20px;
     font-family:Jost;
     text-decoration: none;
     color:black
