--- a/style_home.css
+++ b/style_home.css
@@ -65,11 +65,11 @@ body::-webkit-scrollbar {
 }
 
 .box img {
-    height:100px;
+    height:125px;
 }
 
 .box1 img {
-    height:125px;
+    height:150px;
 }
 
 .box1 {
@@ -97,7 +97,7 @@ body::-webkit-scrollbar {
     font-family:Jost;
     color: #333;
     text-align: center;
-    margin-top: 2px;
+    margin-top: 5px;
 }
 
 
@@ -123,3 +123,12 @@ body::-webkit-scrollbar {
 .linkhover:hover{
     color:#4A90E2
 }
+
+.box img {
+    transition: transform 0.3s ease;
+}
+
+.box img:hover {
+    transform: scale(1.1); 
+}
+
