--- a/style_home.css
+++ b/style_home.css
@@ -95,7 +95,7 @@ body::-webkit-scrollbar {
 .icontext {
     font-size: 20px;
     font-family:Jost;
-    color: #333;
+    color: black;
     text-align: center;
     margin-top: 5px;
 }
