--- a/style_info.css
+++ b/style_info.css
@@ -46,5 +46,11 @@ body::-webkit-scrollbar {
     position:absolute;
     height:100%;
     width:100%;
+    z-index:998;
+}
 
+.newlink{
+    position:relative;
+    color:blueviolet;
+    z-index: 999;
 }
